# visualisations

./: .gitignore  CHANGELOG.md  LICENSE-CC4.0NA.md  LICENSE.MD  Notes.docx  README.md  Requirements & Design.docx
AudioVisual/: AudioVisual.sln
AudioVisual/AudioVisual/: AudioVisual.vcxproj  AudioVisual.vcxproj.filters  Buffer.cpp  Buffer.h  Recorder.cpp  Recorder.h  Renderer.cpp  Source.cpp  Vertex.h  shader.vs
AudioVisual/Shaders/: fragment.fs
Configurations/: modelconfiguration.xml
Features/: FEATURES.md
Projects/AudioAttributes/: AudioAttributes.sln  Requirements.docx
Projects/HighDimensionalSandbox/: HighDimensionalSandbox.sln
Projects/IMGUI/: IMGUI.sln
Projects/IMGUI/IMGUI/: AbstractRandomObject.h  (+64 more)
Projects/Oscilloscope/: Oscilloscope.sln
Projects/RenderToFile/: RenderToFile.sln
Projects/Visualisations/: CMakeLists.txt  Visualisations.sln
Projects/Visualisations/CMake/: CMakeLists.txt
Projects/Visualisations/IMGUI/: Buffer.cpp  Buffer.h  FFMPEG_Encoder.cpp  IMGUI.vcxproj  IMGUI.vcxproj.filters  Mesh.cpp  Mesh.h  MeshGenerator.cpp  MeshGenerator.h  Model_AudioInterface.cpp  Model_AudioInterface.h  Model_VideoRendering.cpp  Model_VideoRendering.h  Model_Visualisation.cpp  Model_Visualisation.h  PostProcessing.cpp  PostProcessing.h  Program.cpp  Program.h  Recorder.cpp  Recorder.h  Scene.h  Shader.cpp  Texture.h  Tree.h  VectorField.h  Visualisation.cpp  Visualisation.h  Visualisation_Cubes.cpp  Visualisation_Cubes.h  Visualisation_Fractal.cpp  Visualisation_Fractal.h  Visualisation_GameOfLife.cpp  Visualisation_GameOfLife.h  Visualisation_Oscilloscope.h  Visualisation_PointClouds.cpp  Visualisation_PointClouds.h  Visualisation_Sandbox.cpp  Visualisation_Sandbox.h  Window_Abstract.cpp  (+6 more)
Projects/Visualisations/IMGUI/Visualisation_GOL/: GameOfLife_Element.h  GameOfLife_ElementList.cpp  GameOfLife_Grid.h
Projects/Visualisations/Shaders/: Cubes_LampFragment.fs  Cubes_ObjectFragment.fs  Fractal_Linestrip_Fragment.fs  Fractal_Linestrip_Vertex.vs  Mesh_Fragment.fs  Mesh_Vertex.vs  Particles_Fragment.fs  Particles_Vertex.vs
Projects/Visualisations/Shaders/Bloom/: blur.fs  hdr.fs  hdr.vs
Projects/Visualisations/Shaders/Rescale/: rescale.fs
Projects/Visualisations/UnitTests/: TestSuite.cpp  UnitTests.vcxproj  UnitTests.vcxproj.filters
Projects/Visualisations/Visualisations/: About.cpp  AudioReader.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraSystem.cpp  CameraSystem.h  Constants.h  Event.cpp  Event.h  EventsSystem.h  FFMPEG_Encoder.cpp  FramebufferSystem.cpp  FramebufferSystem.h  FunctionSource.h  GeometryTools.cpp  GeometryTools.h  Interpolation.cpp  Interpolation.h  MappableProperty.h  Mesh.cpp  Mesh.h  MeshGenerator.cpp  MeshGenerator.h  Model_AudioInterface.cpp  Model_AudioInterface.h  Model_Scene.cpp  Model_Scene.h  Model_Session.cpp  Model_Session.h  Model_Transport.cpp  Model_Transport.h  Model_VideoRendering.cpp  Model_VideoRendering.h  Model_ViewportSystem.cpp  Model_ViewportSystem.h  Model_Visualisation.cpp  Model_Visualisation.h  (+69 more)
Projects/Visualisations/Visualisations/Visualisation_GOL/: GameOfLife_Element.h  GameOfLife_Game.h  GameOfLife_Grid.cpp  GameOfLife_Grid.h
Projects/Visualisations/Visualisations/_videofiles/: desktop.ini
Projects/Visualisations/Visualisations/audio/: AudioReader.h  CMakeLists.txt
Projects/Visualisations/Visualisations/camera/: Camera.cpp  CameraSystem.cpp
Projects/Visualisations/Visualisations/game-of-life/: GameOfLife_Game.cpp
Projects/Visualisations/Visualisations/graphics/: Mesh.h  MeshGenerator.cpp  Shader.h
Projects/Visualisations/Visualisations/models/: Model_AudioInterface.cpp  Model_Scene.h  Model_ViewportSystem.cpp
Projects/Visualisations/Visualisations/program/: Program.cpp  Program.h
Projects/Visualisations/Visualisations/time/: Timestring.h
Projects/Visualisations/Visualisations/visualisations/: Visualisation.h  Visualisation_Cubes.cpp  Visualisation_Cubes.h  Visualisation_Fractal.cpp  Visualisation_GameOfLife.h  Visualisation_Splinters.cpp
Projects/Visualisations/Visualisations/windows/: Window_Session.cpp  Window_Transport.cpp  Window_VideoRendering.h  Window_ViewportSystem.h
Projects/Visualisations/assets/shaders/Bloom/: hdr.fs
assets/shaders/: Cubes_ObjectFragment.fs  Cubes_Vertex.vs  Particles_Fragment.fs
unit-tests/: CMakeLists.txt  TestSuite.cpp  UnitTests.vcxproj.filters
visualisations/: Visualisations.vcxproj  Visualisations.vcxproj.filters  imgui.ini  main.cpp
visualisations/audio/: Buffer.cpp  Buffer.h  Recorder.cpp  Recorder.h
visualisations/camera/: CMakeLists.txt  Camera.h  CameraSystem.h
visualisations/game-of-life/: CMakeLists.txt  GameOfLife_Grid.cpp
visualisations/general/: About.cpp  About.h  Serialisation.h
visualisations/graphics/: GeometryTools.cpp  GeometryTools.h  Mesh.cpp  MeshGenerator.h  PostProcessing.cpp  Scene.h  Texture.cpp  Texture.h
visualisations/maths/: Interpolation.cpp  MetaDistribution.h  ODE.cpp  VectorField.h
visualisations/models/: Model_AudioInterface.h  Model_Session.cpp  Model_Session.h  Model_Transport.cpp  Model_Transport.h  Model_VideoRendering.cpp  Model_ViewportSystem.h  Model_Visualisation.cpp  Model_Visualisation.h
visualisations/particles/: ParticleSet.cpp  ParticleSet.h  ParticleSystem.cpp  ParticleSystem.h  Trajectory.cpp  Trajectory.h
visualisations/scripting/: Event.h  EventsSystem.h  MappableProperty.h
visualisations/time/: Timekeeping.h
visualisations/visualisations/: Visualisation_Fractal.h  Visualisation_GameOfLife.cpp  Visualisation_Oscilloscope.cpp  Visualisation_Particles.cpp  Visualisation_Particles.h  Visualisation_PointClouds.cpp  Visualisation_PointClouds.h  Visualisation_Sandbox.cpp  Visualisation_Sandbox.h  Visualisation_Splinters.h  Visualisation_TreeField.cpp  Visualisation_TreeField.h
visualisations/windows/: UI_Recorder.cpp  UI_Recorder.h  UserInterface.cpp  Window_AudioInterface.cpp  Window_AudioInterface.h  Window_PostProcessing.cpp  Window_PostProcessing.h  Window_Session.h  Window_VideoRendering.cpp  Window_ViewportSystem.cpp  Window_Visualisation.cpp
(+99 files in other folders)
